docs: add authorization to swagger and group endpoints
